--- a/package.json
+++ b/package.json
@@ -1,33 +1,42 @@
 {
   "name": "simple_calc",
-  "version": "0.1.1",
   "private": true,
+  "version": "0.2.0",
+  "type": "module",
+  "scripts": {
+    "dev_serve": "vite --host 0.0.0.0",
+    "build": "vite build",
+    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0 && echo 'Linting ok'",
+    "watch_lint": "chokidar src -c 'run-s lint'",
+    "preview": "vite preview",
+    "dev": "run-p -c dev_serve watch_lint",
+    "test": "vitest"
+  },
   "dependencies": {
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.13.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.6",
+    "prop-types": "^15.8.1",
     "@yozora/react-mathjax": "^2.3.3",
     "lodash": "^4.17.21",
     "quick-primefactors": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "use-local-storage-state": "^18.3.3"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "devDependencies": {
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@vitejs/plugin-react": "^4.0.1",
+    "chokidar-cli": "^3.0.0",
+    "eslint": "^8.44.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.1",
+    "vite": "^4.4.0",
+    "npm-run-all": "^4.1.5",
+    "vitest": "^0.32.2"
   },
   "browserslist": {
     "production": [
