--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
-    "prop-types": "^15.8.1",
     "@yozora/react-mathjax": "^2.3.3",
     "lodash": "^4.17.21",
+    "mathjs": "^11.8.2",
+    "prop-types": "^15.8.1",
     "quick-primefactors": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -34,8 +35,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
-    "vite": "^4.4.0",
     "npm-run-all": "^4.1.5",
+    "vite": "^4.4.0",
     "vitest": "^0.32.2"
   },
   "browserslist": {
